# georchestra-signalement-api/src/main/java/org/georchestra/signalement/api/controller/UserRoleContextController.java
@@ -4,6 +4,7 @@ import io.swagger.annotations.Api;
 import org.georchestra.signalement.api.UserRoleContextsApi;
 import org.georchestra.signalement.core.dto.UserRoleContext;
 import org.georchestra.signalement.core.dto.UserRoleContextPageResult;
+import org.georchestra.signalement.core.dto.UserRoleContextSearchCriteria;
 import org.georchestra.signalement.core.util.UtilPageable;
 import org.georchestra.signalement.service.exception.InvalidDataException;
 import org.georchestra.signalement.service.sm.UserRoleContextService;
@@ -22,49 +23,54 @@ import org.springframework.web.bind.annotation.RestController;
 @Api(tags = "userRoleContext")
 public class UserRoleContextController implements UserRoleContextsApi {
 
-    @Autowired
-    UserRoleContextService userRoleContextService;
+	@Autowired
+	UserRoleContextService userRoleContextService;
 
-    @Autowired
-    UtilPageable utilPageable;
+	@Autowired
+	UtilPageable utilPageable;
 
-    @Override
-    public ResponseEntity<UserRoleContextPageResult> searchUserRoleContexts(String user, String role, Long geographicArea, String contextDescription, Integer offset, Integer limit, String sortExpression) throws Exception {
+	@Override
+	public ResponseEntity<UserRoleContextPageResult> searchUserRoleContexts(String userLogin, String roleName,
+			Long geographicAreaId, String contextDescriptionName, Integer offset, Integer limit, String sortExpression)
+			throws Exception {
 
-        Pageable pageable = utilPageable.getPageable(offset, limit, sortExpression);
-        Page<UserRoleContext> pageResult = userRoleContextService.searchUserRoleContexts(pageable, user, role,
-                contextDescription, geographicArea);
+		UserRoleContextSearchCriteria searchCriteria = UserRoleContextSearchCriteria.builder().userLogin(userLogin)
+				.roleName(roleName).geographicAreaId(geographicAreaId).contextDescriptionName(contextDescriptionName)
+				.build();
+		Pageable pageable = utilPageable.getPageable(offset, limit, sortExpression);
+		Page<UserRoleContext> pageResult = userRoleContextService.searchUserRoleContexts(searchCriteria, pageable);
 
-        UserRoleContextPageResult resultObject = new UserRoleContextPageResult();
-        resultObject.setResults(pageResult.getContent());
-        resultObject.setTotalItems(pageResult.getTotalElements());
+		UserRoleContextPageResult resultObject = new UserRoleContextPageResult();
+		resultObject.setResults(pageResult.getContent());
+		resultObject.setTotalItems(pageResult.getTotalElements());
 
-        return ResponseEntity.ok(resultObject);
-    }
+		return ResponseEntity.ok(resultObject);
+	}
 
-    @Override
-    public ResponseEntity<UserRoleContext> createUserRoleContext(UserRoleContext userRoleContext) throws InvalidDataException {
-        return ResponseEntity.ok(userRoleContextService.createUserRoleContext(userRoleContext));
-    }
+	@Override
+	public ResponseEntity<UserRoleContext> createUserRoleContext(UserRoleContext userRoleContext)
+			throws InvalidDataException {
+		return ResponseEntity.ok(userRoleContextService.createUserRoleContext(userRoleContext));
+	}
 
-    @Override
-    public ResponseEntity<Void> deleteUserRoleContext(Long id, Boolean force) throws Exception {
-        if (id != null) {
-            userRoleContextService.deleteUserRoleContext(id, force);
-        }
-        return ResponseEntity.ok().build();
-    }
+	@Override
+	public ResponseEntity<Void> deleteUserRoleContext(Long id, Boolean force) throws Exception {
+		if (id != null) {
+			userRoleContextService.deleteUserRoleContext(id, force);
+		}
+		return ResponseEntity.ok().build();
+	}
 
-    @Override
-    public ResponseEntity<UserRoleContext> getUserRoleContext(Long id) throws Exception {
-        UserRoleContext result = null;
-        if (id != null) {
-            result = userRoleContextService.getUserRoleContext(id);
-        }
-        if (result != null) {
-            return ResponseEntity.ok(result);
-        } else {
-            return ResponseEntity.ok().build();
-        }
-    }
+	@Override
+	public ResponseEntity<UserRoleContext> getUserRoleContext(Long id) throws Exception {
+		UserRoleContext result = null;
+		if (id != null) {
+			result = userRoleContextService.getUserRoleContext(id);
+		}
+		if (result != null) {
+			return ResponseEntity.ok(result);
+		} else {
+			return ResponseEntity.ok().build();
+		}
+	}
 }
