# georchestra-signalement-core/src/main/java/org/georchestra/signalement/core/dto/UserRoleContextSearchCriteria.java
@@ -1,16 +1,27 @@
 package org.georchestra.signalement.core.dto;
 
+import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Data;
-import org.georchestra.signalement.core.entity.acl.ContextDescriptionEntity;
-import org.georchestra.signalement.core.entity.acl.GeographicAreaEntity;
-import org.georchestra.signalement.core.entity.acl.RoleEntity;
-import org.georchestra.signalement.core.entity.acl.UserEntity;
+import lombok.NoArgsConstructor;
 
 @Data
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
 public class UserRoleContextSearchCriteria {
 
-    UserEntity user;
-    RoleEntity role;
-    ContextDescriptionEntity contextDescription;
-    GeographicAreaEntity geographicArea;
+    private String userLogin;
+    
+    private Long userId;
+    
+    private String  roleName;
+    
+    private Long roleId;
+    
+    private String contextDescriptionName;
+    
+    private Long contextDescriptionId;
+    
+    private Long geographicAreaId;
 }
